--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -8,3 +8,23 @@ body::after {
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
 }
+
+body {
+  margin: 0% 20%;
+}
+
+h4 {
+  font-size: 1rem;
+  color: rgba(56, 56, 56, 1);
+}
+
+h3 {
+  font-size: 1.5rem;
+  color: rgba(56, 56, 56, 1);
+  line-height: 2.5rem;
+  margin: 2rem 0rem;
+}
+
+a {
+  color: rgba(56, 56, 56, 0)
+}
