added a bottom margin to recipe page buttons

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -6,7 +6,7 @@ body::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 body {
@@ -27,5 +27,5 @@ h3 {
 }
 
 a {
-  color: rgba(56, 56, 56, 0)
+  color: rgba(56, 56, 56, 0);
 }
