--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -11,7 +11,7 @@ body::after {
 
 body {
   margin: 0% 20%;
-  background: linear-gradient(#ff9900, #ac4e83);
+  background: linear-gradient(to bottom right, hsl(61, 48%, 59%), hsl(61, 38%, 79%), );
 }
 
 h4 {
