--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -19,12 +19,19 @@ body {
   margin: 0% 20%;
   @media screen and (max-width: 768px) {
     margin: 0% 5%;
+    background: linear-gradient(
+    to bottom,
+    hsl(61, 48%, 59%),
+    hsl(61, 38%, 79%)
+  );
   }
-  background: linear-gradient(
+  @media screen and (min-width: 769px) { 
+    background: linear-gradient(
     to bottom right,
     hsl(61, 48%, 59%),
     hsl(61, 38%, 79%)
   );
+  }
     
   }
 
