moved some of the shared css into the main css file

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -50,6 +50,13 @@ h3 {
   font-weight: 600;
 }
 
+h2 {
+  padding: 1.5vh;
+  color: #000;
+  font-size: 2rem;
+}
+
 a {
   color: rgba(56, 56, 56, 0);
+  text-decoration: none;
 }
