--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -42,8 +42,11 @@ body {
 
 h4 {
   font-size: clamp($h4-font-min, $h4-font-preferred, $h4-font-max);
-  color: rgba(56, 56, 56, 1);
+  color: #383838;
   font-weight: 500;
+  @media  screen and (min-width: 769px) {
+    font-size: clamp($h4-font-min * 1.5, $h4-font-preferred *1.5, $h4-font-max *1.5);
+  }
 }
 
 h3 {
